minor edit to thumbnails
git-svn-id: http://chromium.googlecode.com/svn/trunk/samples/audio@2869 642247e6-a953-0410-9eba-834bae0c6d03

--- a/index.html
+++ b/index.html
@@ -212,14 +212,16 @@ and sound source.<br>
 <br><br><br>
 
 <h2>More Demos</h2>
+<a href="samples.html"><img src="images/ring-visualizer.png"></a>
+<a href="samples.html"><img src="images/webgl-city.png"></a>
 <a href="samples.html"><img src="images/html5wow.png"></a>
 <a href="samples.html"><img src="images/gal9000.png"></a>
-<a href="samples.html"><img src="images/tonecraft.png"></a>
 <a href="samples.html"><img src="images/plink.png"></a>
+<a href="samples.html"><img src="images/tonecraft.png"></a>
 <a href="samples.html"><img src="images/b.uild.in.png"></a>
 <a href="samples.html"><img src="images/storiesinflight.png"></a>
 <a href="samples.html"><img src="images/technocrat.png"></a>
-<a href="samples.html"><img src="images/orbisyn.png"></a>
+<a href="samples.html"><img src="images/bohemian.png"></a>
  
 </body> 
 </html> 
