add Angry Birds and Morning Star synth
git-svn-id: http://chromium.googlecode.com/svn/trunk/samples/audio@2926 642247e6-a953-0410-9eba-834bae0c6d03

--- a/samples.html
+++ b/samples.html
@@ -51,6 +51,14 @@ OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 
 <tr> 
 <td  style="width: 60px;"> 
+<div style="display: block; text-align: left;"><a href="http://chrome.angrybirds.com/" imageanchor="1"><img src="images/angrybirds.png" border="1"></a></div> 
+</td> 
+<td style="width: 3000px;"><a href="http://chrome.angrybirds.com/"><b>Angry Birds</b></a> 
+The ever-popular game now uses the Web Audio API, if available.</td> 
+</tr>
+
+<tr> 
+<td  style="width: 60px;"> 
 <div style="display: block; text-align: left;"><a href="http://airtightinteractive.com/demos/js/reactive/" imageanchor="1"><img src="images/ring-visualizer.png" border="1"></a></div> 
 </td> 
 <td style="width: 3000px;"><a href="http://airtightinteractive.com/demos/js/reactive/"><b>Ring Visualizer</b></a> 
@@ -161,6 +169,21 @@ A Music Hack Day hack by Jennie and Paul Lamere.  For more information see <a hr
 
 </tr> 
 
+
+
+<tr> 
+<td style="width: 60px;"> 
+<div style="display: block; text-align: left;"><a href="http://bitterspring.net/ms/morningstar/" imageanchor="1"><img src="images/morningstar.png" border="1"></a></div> 
+</td> 
+<td style="width: 3000px;"><a href="http://bitterspring.net/ms/morningstar/">
+
+
+<b>Morning Star Synth</b></a>
+
+is a monophonic bassline synthesizer controlled by a step sequencer.  It features resonant filters, distortion, and a reverb - demo courtesy of Jane's Conference.
+</td> 
+
+</tr> 
 
  
 
