--- a/samples.html
+++ b/samples.html
@@ -181,6 +181,19 @@ A Music Hack Day hack by Jennie and Paul Lamere.  For more information see <a hr
 
 <tr> 
 <td style="width: 60px;"> 
+<div style="display: block; text-align: left;"><a href="http://aikelab.net/websynth/" imageanchor="1"><img src="images/websynth.png" border="1"></a></div> 
+</td> 
+<td style="width: 3000px;"><a href="http://aikelab.net/websynth/">
+
+
+<b>Web Synth</b></a>
+is a two oscillator synthesizer - demo courtesy of Aike.
+</td> 
+
+</tr> 
+
+<tr> 
+<td style="width: 60px;"> 
 <div style="display: block; text-align: left;"><a href="http://bitterspring.net/ms/morningstar/" imageanchor="1"><img src="images/morningstar.png" border="1"></a></div> 
 </td> 
 <td style="width: 3000px;"><a href="http://bitterspring.net/ms/morningstar/">
