add Multiplayer Piano, Bytebeat, PlayCanvas 3D
git-svn-id: http://chromium.googlecode.com/svn/trunk/samples/audio@2986 642247e6-a953-0410-9eba-834bae0c6d03

--- a/samples.html
+++ b/samples.html
@@ -82,27 +82,6 @@ the helicopter "n".</td>
 By Kevin Ennis.  Two demos let you apply a high-quality reverberation effect and control the real-time mixing of a song!</td>
 </tr> 
 
-<tr> 
-<td  style="width: 60px;"> 
-<div style="display: block; text-align: left;"><a href="http://www.htmlfivewow.com/demos/audio-visualizer/index.html" imageanchor="1"><img src="images/html5wow.png" border="1"></a></div> 
-</td> 
-<td style="width: 3000px;"><a href="http://www.htmlfivewow.com/demos/audio-visualizer/index.html"><b>HTML5 Wow Visualizer.</b></a> 
-Shown at Google I/O 2011 - demo courtesy of Eric Bidelman and Arne Roomann-Kurrik.</td> 
-</tr> 
-
-<tr> 
-<td style="width: 60px;"> 
-<div style="display: block; text-align: left;"><a href="http://www.htmlfivewow.com/demos/hal/index.html" imageanchor="1"><img src="images/gal9000.png" border="1"></a></div> 
-</td> 
-<td style="width: 3000px;"><a href="http://www.htmlfivewow.com/demos/hal/index.html">
-
-
-<b>GAL 9000</b></a>
-
-Shown at Google I/O 2011 - demo courtesy of Eric Bidelman and Arne Roomann-Kurrik.
-   </td> 
-
-</tr> 
 
 
 <tr> 
@@ -136,10 +115,52 @@ Another interactive music application from <a href="http://www.dinahmoe.com/">Di
 
 <tr> 
 <td style="width: 60px;"> 
+<div style="display: block; text-align: left;"><a href="http://www.multiplayerpiano.com/" imageanchor="1"><img src="images/multiplayer-piano.png" border="1"></a></div> 
+</td> 
+<td style="width: 3000px;"><a href="http://www.multiplayerpiano.com/">
+
+
+<b>Multiplayer Piano</b></a>
+
+By Brandon Lockaby.  Play the piano with people from all around the world!  github project <a href="http://github.com/brandon-lockaby">here</a>.
+   </td> 
+
+</tr>
+
+
+
+<tr> 
+<td style="width: 60px;"> 
+<div style="display: block; text-align: left;"><a href="http://apps.playcanvas.com/dave/tutorials/3d_audio" imageanchor="1"><img src="images/playcanvas.png" border="1"></a></div> 
+</td> 
+<td style="width: 3000px;"><a href="http://apps.playcanvas.com/dave/tutorials/3d_audio">
+
+<b>PlayCanvas 3D Positional Audio</b></a>
+
+by Dave Evans of <a href="http://playcanvas.com/">playcanvas</a>
+   </td> 
+
+</tr> 
+
+
+<tr> 
+<td style="width: 60px;"> 
+<div style="display: block; text-align: left;"><a href="http://greggman.com/downloads/examples/html5bytebeat/html5bytebeat.html" imageanchor="1"><img src="images/bytebeat.png" border="1"></a></div> 
+</td> 
+<td style="width: 3000px;"><a href="http://greggman.com/downloads/examples/html5bytebeat/html5bytebeat.html">
+
+<b>Bytebeat</b></a>
+
+HTML5 version by Gregg Tavares.  It lets you write a musical function given only "t" as input.  See Gregg's <a href="http://games.greggman.com/game/html5-bytebeat/#more-2238">blog</a> for more information.
+   </td> 
+
+</tr> 
+
+<tr> 
+<td style="width: 60px;"> 
 <div style="display: block; text-align: left;"><a href="http://www.iquilezles.org/apps/soundtoy/index.html" imageanchor="1"><img src="images/sound-toy.png" border="1"></a></div> 
 </td> 
 <td style="width: 3000px;"><a href="http://www.iquilezles.org/apps/soundtoy/index.html">
-
 
 <b>Sound Toy</b></a>
 
@@ -207,6 +228,28 @@ is a monophonic bassline synthesizer controlled by a step sequencer.  It feature
 </tr> 
 
  
+<tr> 
+<td  style="width: 60px;"> 
+<div style="display: block; text-align: left;"><a href="http://www.htmlfivewow.com/demos/audio-visualizer/index.html" imageanchor="1"><img src="images/html5wow.png" border="1"></a></div> 
+</td> 
+<td style="width: 3000px;"><a href="http://www.htmlfivewow.com/demos/audio-visualizer/index.html"><b>HTML5 Wow Visualizer.</b></a> 
+Shown at Google I/O 2011 - demo courtesy of Eric Bidelman and Arne Roomann-Kurrik.</td> 
+</tr> 
+
+<tr> 
+<td style="width: 60px;"> 
+<div style="display: block; text-align: left;"><a href="http://www.htmlfivewow.com/demos/hal/index.html" imageanchor="1"><img src="images/gal9000.png" border="1"></a></div> 
+</td> 
+<td style="width: 3000px;"><a href="http://www.htmlfivewow.com/demos/hal/index.html">
+
+
+<b>GAL 9000</b></a>
+
+Shown at Google I/O 2011 - demo courtesy of Eric Bidelman and Arne Roomann-Kurrik.
+   </td> 
+
+</tr> 
+
 
 <tr> 
 <td style="width: 60px;"> 
