--- a/compression-curve2.html
+++ b/compression-curve2.html
@@ -66,8 +66,8 @@ var thresholdColor = "rgb(75,25,25)";
 var sampleRate = 44100.0;
 var nyquist = 0.5 * sampleRate;
 
-var threshold = 60.0 * (0.6 - 1.0);
-var knee = 0.7 * 30.0;
+var threshold = -24;
+var knee = 30;
 var ratio = 12;
 var makeupGain = 0;
 
