--- a/simple.html
+++ b/simple.html
@@ -512,8 +512,6 @@ spatialized 8 (medium open)</li>
 <li onmousedown="setReverbImpulseResponse('impulse-responses/spatialized9.wav');">
 spatialized 9 (medium open)</li>
 
-
-
 <li onmousedown="setReverbImpulseResponse('impulse-responses/echo-chamber.wav');">
 Echo Chamber</li>
 
@@ -531,6 +529,14 @@ Wild Echo</li>
 
 <li onmousedown="setReverbImpulseResponse('impulse-responses/backslap1.wav');">
 backslap</li>
+
+<li onmousedown="setReverbImpulseResponse('impulse-responses/tim-warehouse/tim-stretch2.wav');">
+tim-stretch2</li>
+
+<li onmousedown="setReverbImpulseResponse('impulse-responses/tim-warehouse/tim-warehouse-stretch1.wav');">
+tim-warehouse-stretch1.wav</li>
+
+
 
 
 </ul>
