--- a/samples.html
+++ b/samples.html
@@ -51,6 +51,16 @@ OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 
 <tr> 
 <td  style="width: 60px;"> 
+<div style="display: block; text-align: left;"><a href="http://www.tenthcirclesound.com/kickstarter/#5a " imageanchor="1"><img src="images/remix.png" border="1"></a></div> 
+</td> 
+<td style="width: 3000px;"><a href="http://www.tenthcirclesound.com/kickstarter/#5a "><b>RemiX</b></a> 
+A very unique interactive remix application with great audio and visual design.  Demo courtesy of Chris Coniglio.
+Also check out <a href="http://www.tenthcirclesound.com/sympyrean/">Sympyrean</a>!</td> 
+</tr>
+
+
+<tr> 
+<td  style="width: 60px;"> 
 <div style="display: block; text-align: left;"><a href="http://chrome.angrybirds.com/" imageanchor="1"><img src="images/angrybirds.png" border="1"></a></div> 
 </td> 
 <td style="width: 3000px;"><a href="http://chrome.angrybirds.com/"><b>Angry Birds</b></a> 
