update Safari info
git-svn-id: http://chromium.googlecode.com/svn/trunk/samples/audio@3247 642247e6-a953-0410-9eba-834bae0c6d03

--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@ OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 </head> 
  
 <body>
+
 <h2>Web Audio Examples</h2>
 <p>The Web Audio API introduces a variety of new audio features to the web platform. It can be used with the <code>canvas</code> 2D and 
 	<code>WebGL</code> 3D graphics APIs for creating a new generation of games and interactive applications.
@@ -79,8 +80,12 @@ Canary builds are nightly builds which are not very well tested and can be unsta
 <h4> Mac OS X</h4>
 
 <p>
-Web Audio is available in Apple Safari <a href="http://nightly.webkit.org/">nightly builds</a>.
-Before running, it must be enabled by going into the "Terminal" application and typing:
+Web Audio is available in Apple Safari 6 in Mountain Lion, and in iOS 6 Beta.
+</p>
+
+<p>
+More cutting-edge <a href="http://nightly.webkit.org/">nightly builds</a> are also available.  For these builds,
+before running, it might be necessary to enable by going into the "Terminal" application and typing:
 </p>
 
 <pre>
