--- a/samples.html
+++ b/samples.html
@@ -114,6 +114,13 @@ is a fusion of WebGL, Canvas, Web Sockets, CSS3, Javascript, Flash, and the Web 
 is an interactive funk sequencer delving into some very interesting musical history.  Demo courtesy of Rob Stenson.</td> 
 </tr>
 
+<tr> 
+<td  style="width: 60px;"> 
+<div style="display: block; text-align: left;"><a href="http://matt-diamond.com/drone.html/" imageanchor="1"><img src="images/ambient-drone.png" border="1"></a></div> 
+</td> 
+<td style="width: 3000px;"><a href="http://matt-diamond.com/drone.html/"><b>Ambient Drone</b></a> 
+synthesizes an ambient sound texture using filtered noise.  Demo courtesy of Matt Diamond.</td> 
+</tr>
 
 <tr> 
 <td  style="width: 60px;"> 
