add TiberSynth demo
git-svn-id: http://chromium.googlecode.com/svn/trunk/samples/audio@3271 642247e6-a953-0410-9eba-834bae0c6d03

--- a/samples.html
+++ b/samples.html
@@ -128,6 +128,14 @@ is a fusion of WebGL, Canvas, Web Sockets, CSS3, Javascript, Flash, and the Web 
 is an interactive funk sequencer delving into some very interesting musical history.  Demo courtesy of Rob Stenson.</td> 
 </tr>
 
+<tr>
+<td  style="width: 60px;"> 
+<div style="display: block; text-align: left;"><a href="http://tibersynth.prtcl.cc/" imageanchor="1"><img src="images/tibersynth.png" border="1"></a></div> 
+</td> 
+<td style="width: 3000px;"><a href="http://tibersynth.prtcl.cc/"><b>TiberSynth</b></a> 
+Real-time audio synthesis and many-to-many vector mapping in the web browser.  Demo courtesy of Cory O'Brian.</td> 
+</tr>
+
 <tr> 
 <td  style="width: 60px;"> 
 <div style="display: block; text-align: left;"><a href="http://matt-diamond.com/drone.html" imageanchor="1"><img src="images/ambient-drone.png" border="1"></a></div> 
