add guitar tuner
git-svn-id: http://chromium.googlecode.com/svn/trunk/samples/audio@3323 642247e6-a953-0410-9eba-834bae0c6d03

--- a/samples.html
+++ b/samples.html
@@ -101,7 +101,15 @@ Play the Xylophone using your webcam!  Demo courtesy of Romuald Quantin.
 </td> 
 </tr>
 
-
+<tr> 
+<td  style="width: 60px;"> 
+<div style="display: block; text-align: left;"><a href="http://phenomnomnominal.github.com/" imageanchor="1"><img src="images/guitar-tuner.png" border="1"></a></div> 
+</td> 
+<td style="width: 3000px;"><a href="http://phenomnomnominal.github.com/"><b>Guitar Tuner</b></a> 
+by Craig Spence lets you tune your guitar, voice, or other instrument.
+The "live audio" feature is currently only available in Mac Chrome Canary and requires enabling "Web Audio Input" in "about:flags".
+</td>
+</tr>
 
 <tr> 
 <td  style="width: 60px;"> 
