add Acid Defender
git-svn-id: http://chromium.googlecode.com/svn/trunk/samples/audio@3337 642247e6-a953-0410-9eba-834bae0c6d03

--- a/samples.html
+++ b/samples.html
@@ -51,6 +51,20 @@ OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 
 <tr> 
 <td  style="width: 60px;"> 
+<div style="display: block; text-align: left;"><a href="http://www.cappel-nord.de/webaudio/acid-defender/" imageanchor="1"><img src="images/acid-defender.png" border="1"></a></div> 
+</td> 
+<td style="width: 3000px;"><a href="http://www.cappel-nord.de/webaudio/acid-defender/"><b>Acid Defender</b></a> 
+is a web experiment, merging music-making with gameplay. All sounds (except for the snare and kick drum) 
+are synthesized in the web browser and all sounds are sequenced in the web browser.
+You can either play the game, in which you must evade the "evil" red squares who want to destroy your notes, or you can play the jam mode with no enemies and more controls.
+<br><br>
+Demo courtesy of Patrick Borgeat (@cappelnord)
+
+</td>
+</tr>
+
+<tr> 
+<td  style="width: 60px;"> 
 <div style="display: block; text-align: left;"><a href="http://dashersw.github.com/pedalboard.js/demo/" imageanchor="1"><img src="images/pedalboard.png" border="1"></a></div> 
 </td> 
 <td style="width: 3000px;"><a href="http://dashersw.github.com/pedalboard.js/demo/"><b>Pedalboard.js</b></a> 
