add some more demos thumbnails
git-svn-id: http://chromium.googlecode.com/svn/trunk/samples/audio@3360 642247e6-a953-0410-9eba-834bae0c6d03

--- a/index.html
+++ b/index.html
@@ -221,14 +221,20 @@ and sound source.<br>
 <h2>More Demos</h2>
 <a href="samples.html"><img src="images/ring-visualizer.png"></a>
 <a href="samples.html"><img src="images/webgl-city.png"></a>
-<a href="samples.html"><img src="images/html5wow.png"></a>
-<a href="samples.html"><img src="images/gal9000.png"></a>
+<a href="samples.html"><img src="images/pedalboard.png"></a>
+<a href="samples.html"><img src="images/trigger-rally.png"></a>
+<a href="samples.html"><img src="images/funklet.png"></a>
+<a href="samples.html"><img src="images/filter-editor.png"></a>
+<a href="samples.html"><img src="images/mixer.png"></a>
+<a href="samples.html"><img src="images/xylophone.png"></a>
+
 <a href="samples.html"><img src="images/plink.png"></a>
 <a href="samples.html"><img src="images/tonecraft.png"></a>
 <a href="samples.html"><img src="images/b.uild.in.png"></a>
 <a href="samples.html"><img src="images/storiesinflight.png"></a>
 <a href="samples.html"><img src="images/technocrat.png"></a>
 <a href="samples.html"><img src="images/bohemian.png"></a>
+
  
 </body> 
 </html> 
