--- a/javascript-processing2.html
+++ b/javascript-processing2.html
@@ -120,7 +120,7 @@ function loadSample(url) {
 
     request.onload = function() { 
         source.buffer = context.createBuffer(request.response, false);
-        source.looping = true;
+        source.loop = true;
         source.noteOn(0);
         
         draw();
