--- a/visualizer2-gl.html
+++ b/visualizer2-gl.html
@@ -132,7 +132,7 @@ function draw() {
 
 function finishLoad() {
     source.buffer = audioBuffer;
-    source.looping = true;
+    source.loop = true;
 
     source.noteOn(0.0);
     
