git-svn-id: http://chromium.googlecode.com/svn/trunk/samples/audio@3436 642247e6-a953-0410-9eba-834bae0c6d03

--- a/peerconnection.html
+++ b/peerconnection.html
@@ -201,8 +201,8 @@ function init() {
     mediaStreamDestination = context.createMediaStreamDestination();
     source.connect(mediaStreamDestination);
 
-    // loadAudioBuffer("sounds/hyper-reality/human-voice.mp4");
-    loadAudioBuffer("sounds/DriftingDrums.mp3");
+    loadAudioBuffer("sounds/hyper-reality/human-voice.mp4");
+    // loadAudioBuffer("sounds/DriftingDrums.mp3");
     loadDrumSound("sounds/drum-samples/Kit8/snare.wav");
 
     document.addEventListener("keydown", handleKeyDown, true);  
