git-svn-id: http://chromium.googlecode.com/svn/trunk/samples/audio@3536 642247e6-a953-0410-9eba-834bae0c6d03

--- a/samplerate.html
+++ b/samplerate.html
@@ -72,7 +72,20 @@ function init() {
 
 <body>
 
-<input type="button" value="Click for sample-rate" onclick="getSampleRate();" />
+<span onclick="getSampleRate();">
+SAMPLE-RATE SAMPLE-RATE SAMPLE-RATE SAMPLE-RATE SAMPLE-RATE SAMPLE-RATE SAMPLE-RATE SAMPLE-RATE 
+SAMPLE-RATE SAMPLE-RATE SAMPLE-RATE SAMPLE-RATE SAMPLE-RATE SAMPLE-RATE SAMPLE-RATE SAMPLE-RATE 
+SAMPLE-RATE SAMPLE-RATE SAMPLE-RATE SAMPLE-RATE SAMPLE-RATE SAMPLE-RATE SAMPLE-RATE SAMPLE-RATE 
+SAMPLE-RATE SAMPLE-RATE SAMPLE-RATE SAMPLE-RATE SAMPLE-RATE SAMPLE-RATE SAMPLE-RATE SAMPLE-RATE 
+SAMPLE-RATE SAMPLE-RATE SAMPLE-RATE SAMPLE-RATE SAMPLE-RATE SAMPLE-RATE SAMPLE-RATE SAMPLE-RATE 
+SAMPLE-RATE SAMPLE-RATE SAMPLE-RATE SAMPLE-RATE SAMPLE-RATE SAMPLE-RATE SAMPLE-RATE SAMPLE-RATE 
+SAMPLE-RATE SAMPLE-RATE SAMPLE-RATE SAMPLE-RATE SAMPLE-RATE SAMPLE-RATE SAMPLE-RATE SAMPLE-RATE 
+SAMPLE-RATE SAMPLE-RATE SAMPLE-RATE SAMPLE-RATE SAMPLE-RATE SAMPLE-RATE SAMPLE-RATE SAMPLE-RATE 
+SAMPLE-RATE SAMPLE-RATE SAMPLE-RATE SAMPLE-RATE SAMPLE-RATE SAMPLE-RATE SAMPLE-RATE SAMPLE-RATE 
+SAMPLE-RATE SAMPLE-RATE SAMPLE-RATE SAMPLE-RATE SAMPLE-RATE SAMPLE-RATE SAMPLE-RATE SAMPLE-RATE 
+SAMPLE-RATE SAMPLE-RATE SAMPLE-RATE SAMPLE-RATE SAMPLE-RATE SAMPLE-RATE SAMPLE-RATE SAMPLE-RATE 
+</span>
+
 <div id="sample-rate"></div>
 
 </body>
