git-svn-id: http://chromium.googlecode.com/svn/trunk/samples/audio@3537 642247e6-a953-0410-9eba-834bae0c6d03

--- a/samplerate.html
+++ b/samplerate.html
@@ -57,10 +57,13 @@ var context;
 var gain;
 
 function getSampleRate() {
+    alert("getSampleRate()");
+
     gain = context.createGain();
     var s = "context.sampleRate = " + context.sampleRate;
     var e = document.getElementById("sample-rate");
     e.innerHTML = s;
+    alert(s);
 }
 
 function init() {
