git-svn-id: http://chromium.googlecode.com/svn/trunk/samples/audio@3539 642247e6-a953-0410-9eba-834bae0c6d03

--- a/samplerate.html
+++ b/samplerate.html
@@ -59,7 +59,7 @@ function getSampleRate() {
     alert("getSampleRate()");
 
     context = new webkitAudioContext();
-    gain = context.createGain();
+    gain = context.createGainNode();
     var s = "context.sampleRate = " + context.sampleRate;
     var e = document.getElementById("sample-rate");
     e.innerHTML = s;
